--- a/templates/client.conf.j2
+++ b/templates/client.conf.j2
@@ -85,6 +85,10 @@ comp-lzo
 # Set log file verbosity.
 verb {{openvpn_verb}}
 
+# Route internet traffic through vpn connection
+redirect-gateway def1
+
+
 {% if openvpn_use_pam or openvpn_use_ldap %}
 auth-user-pass
 {% endif %}
